# yt_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  entrypoint.sh  main.py  nginx.conf  notes.txt  pyproject.toml  subscriptions_combined.json
yt/: settings.py  urls.py
yt/fetcher/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
yt/fetcher/migrations/: 0001_initial.py  0002_subscription_is_fav.py  0003_video.py  0004_video_snippet.py  0005_video_is_rewatchable.py
yt/fetcher/static/fetcher/js/: shuffle_autodelete.js
yt/fetcher/templates/fetcher/: downloaded_videos.html  home.html  navbar.html  rewatchable_videos.html  subscription_list.html
